fix swagger; add rate limiter
