# docs/swagger.json
@@ -4,7 +4,7 @@
         "contact": {}
     },
     "paths": {
-        "/create": {
+        "/customer/create": {
             "post": {
                 "produces": [
                     "application/json"
@@ -46,7 +46,7 @@
                 }
             }
         },
-        "/get/{id}": {
+        "/customer/get/{id}": {
             "get": {
                 "produces": [
                     "application/json"
@@ -77,7 +77,7 @@
                 }
             }
         },
-        "/getAll": {
+        "/customer/getAll": {
             "get": {
                 "produces": [
                     "application/json"
@@ -111,7 +111,7 @@
                 }
             }
         },
-        "/remove/{id}": {
+        "/customer/remove/{id}": {
             "delete": {
                 "produces": [
                     "application/json"
@@ -151,7 +151,7 @@
                 }
             }
         },
-        "/update": {
+        "/customer/update": {
             "post": {
                 "produces": [
                     "application/json"
